...
        }
        else{ self.showAlert(message: "Please enter some keyword for results") }
    }
    
    func showAlert(message: String){
        DispatchQueue.main.async {
        self.createAlert(title: "Sorry!", body: message) }
    }
    
    @IBAction func endEditingTextField(_ sender: AutoSuggestTextField) {
        loadMoreItemsForList()
        currentPage = 0
    }
...
